--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="zh-CN" class="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FlowLog</title>
+    <!-- Tailwind 将通过本地 PostCSS 或 JS 注入，或者保留 CDN 仅用于快速原型，
+         但生产环境建议 npm install tailwindcss 并配置 postcss。
+         为了简便，这里保留 CDN，但在正式产品中建议本地化。 -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -58,6 +61,8 @@
         font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
         overflow: hidden; /* App-like feel */
         transition: background-color 0.3s ease, color 0.3s ease;
+        -webkit-user-select: none; /* 防止用户像网页一样选中文本 */
+        user-select: none;
       }
       
       /* Custom Scrollbar */
@@ -79,16 +84,21 @@
   <script type="importmap">
 {
   "imports": {
-    "react/": "https://aistudiocdn.com/react@^19.2.1/",
     "react": "https://aistudiocdn.com/react@^19.2.1",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.556.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
-    "zustand": "https://aistudiocdn.com/zustand@^5.0.9"
+    "react/": "https://aistudiocdn.com/react@^19.2.1/",
+    "zustand": "https://aistudiocdn.com/zustand@^5.0.9",
+    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.556.0",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
+    "path": "https://aistudiocdn.com/path@^0.12.7",
+    "vite": "https://aistudiocdn.com/vite@^7.2.6",
+    "electron": "https://aistudiocdn.com/electron@^39.2.6"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
